# TP1-WrapperModulaire-IntergrationDonnees

./: CMakeLists.txt  install_json_parser.sh  install_rapid_xml.sh  local-build-mysqlconnector++.sh  maurice.Synthese_WrapperRapide.odt  sql_close_script.sql  sql_init_script.sql  view_creation.sql
datasources/: hotspot.csv  liste_cinema_actifs.csv  tournagesdefilmsparis2011.csv  tournagesdefilmsparis2011.json  tournagesdefilmsparis2011.xml  velib_a_paris_et_communes_limitrophes.csv  velib_a_paris_et_communes_limitrophes.xml
include/SQL/: Column.hpp
include/wrapper/: SQLWrapper.hpp  SQLWrapperFromCSV.hpp  SQLWrapperFromJSON.hpp  SQLWrapperFromXML.hpp  WrapperFactory.hpp
mediator_config/: cinemas.conf  hotspot.conf  tournages.conf  tournages_json.conf  tournages_xml.conf  velib.conf  velib_xml.conf
src/: main.cpp
src/SQL/: Column.cpp
src/wrapper/: SQLWrapper.cpp  SQLWrapperFromCSV.cpp  SQLWrapperFromJSON.cpp  SQLWrapperFromXML.cpp  WrapperFactory.cpp
